# adventintcl

./: .fossil  .gitignore  _FOSSIL_
2015/: Untitled.ipynb  Untitled1.ipynb  day-24.ipynb  day01-cl.ipynb  day01-clj.ipynb  day01-kt.ipynb  day01-py.ipynb  day01-rb.ipynb  day01-rkt.ipynb  day01.ipynb  day02-rb.ipynb  day02-rkt.ipynb  day02.ipynb  day03-rb.ipynb  day03-rkt-Copy1.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11-rb.ipynb  day11-rkt.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14-rb.ipynb  day15.ipynb  day16-rb.ipynb  day16.ipynb  day17-clj.ipynb  day17-rb.ipynb  day17-rkt.ipynb  day17.ipynb  day18.ipynb  day19.ipynb  day20.ipynb  day21-rb.ipynb  (+6 more)
2016/: day01-rb.ipynb  day01.ipynb  day02-rb.ipynb  day03-rb.ipynb  day05.rb  day09.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day5.ipynb
2016/lib/md5/: CMakeLists.txt  library.c  md5c-0.1.tm  test.tcl
2017/: day01.ipynb  day03.ipynb  day06.ipynb  day07-rb.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day6-1-cr.ipynb
2018/: day01.ipynb
2019/: Untitled1.ipynb  day01.ipynb  day02.ipynb  day04.ipynb  day17.ipynb  day17.tcl  day18.ipynb
2020/: Makefile  Untitled.ipynb  day01-cl.ipynb  day01.ipynb  day01.js  day01.tcl  day02.ipynb  day02.tcl  day03.ipynb  day04.ipynb  day04.test  day05.ipynb  day05.tcl  day05.test  day06.ipynb  day06.tcl  day07.ipynb  day08.ipynb  day08.tcl  day09.ipynb  day10.ipynb  day11.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day18.ipynb  (+3 more)
(+88 files in other folders)
