cmake_minimum_required(VERSION 3.10)
project(md5c C)
set(CMAKE_BUILD_TYPE Release)

set(CMAKE_C_STANDARD 99)
find_package (TclStub REQUIRED)
add_library(md5c SHARED library.c library.h)
target_link_libraries(md5c ${TCL_STUB_LIBRARY})
add_definitions(-DUSE_TCL_STUBS)
include_directories (${TCL_INCLUDE_PATH})
